CAWeb 1.12.0
- Updated build process to better align with upcoming CAWeb projects
- Updated State Template 6.3.2 to new modified by version
- Removed caweb-admin.js from loading on login screen
- Corrected issue cagov core script loading on backend when creating widgets
- Added pagination to Github Module
- Footer Social Share ul element no longer renders if empty

CAWeb 1.11.3a
- Increased admin_bar_menu priority due to 6.6.1 increase

CAWeb 1.11.3
- Added Utility Header Options back in for v6
- Dropped Flex and Mega Menu Options

CAWeb 1.11.2
- Updated alert cookie from 0 to false

CAWeb 1.11.0
- Added Custom Fields action 
- Added Action during CAWeb Options

CAWeb 1.10.7
- Added register_meta for the Navigation Meta Fields, allowing these fields to be editable via Rest API

CAWeb 1.10.6
- Fixed issue with certain CAWeb Options not escaping/sanitizing properly
- Removed unique version number from custom css/js
- Fixed issue with automatic conversion of false to array when retrieving widget news feeds
- Fixed issue with array to string conversion in CAWeb Module class
- Updated Alert Banner text and color for the Display option
 
CAWeb 1.10.5
- Update Twitter logo to X
- Removed wildcard from GA samesite attribute 
- Fixed a11y with WPForms Date/Time pickers

CAWeb 1.10.4
- Added defer and crossorigin attributes to statewide alert script
- Fixed Powered by alignment
- Fixed issue with sidebar when in mobile

CAWeb 1.10.3
- Fixed issue with Toggle/Accordions no toggling correctly with enter key
- Updated GA4 code
- Added new CA Statewide Alert option
- Fixed issues with module padding

CAWeb 1.10.2
- Fixed issue with Live Drafts option being reset

CAWeb 1.10.1
- Fixed issue with broken reference to default fav icon
- Resize CA.gov logo for v6
- Spelled out Back to top for v6
- Added new body, page container, main content class options
- Removed Settings Button for v6
- Fixed issues with Google Translate when in Custom mode
- Updated Google Analytics code
