@@ -389,19 +389,6 @@ function caweb_wp_enqueue_scripts() {
 
 	$localize_args = caweb_enqueue_google_scripts( array() );
 
-	// Template JS File.
-	$template_js_file = caweb_get_min_file( "/build/$color-$version.js", 'js' );
-
-	/**
-	 * Core JS File
-	 *
-	 * @todo Once 5.5 is completely removed the core file can be loaded with webpack instead.
-	 */
-
-	if( 5.5 === $version ){
-		$core_js_file = caweb_get_min_file( "/src/version-$version/cagov.core.js", 'js' );
-	}
-
 	// CAWeb JS File.
 	$caweb_js_file = caweb_get_min_file( '/build/caweb-core.js', 'js' );
 
@@ -414,15 +401,27 @@ function caweb_wp_enqueue_scripts() {
 	}
 
 	// Register Scripts.
-	wp_register_script( 'cagov-core-template-script', $template_js_file, array( 'jquery' ), CAWEB_VERSION, true );
-
 	wp_register_script( 'caweb-core-script', $caweb_js_file, array( 'jquery' ), CAWEB_VERSION, true );
 	wp_localize_script( 'caweb-core-script', 'args', $localize_args );
 
-	/* Enqueue Scripts */
+	// Template JS File.
+	$template_js_file = caweb_get_min_file( "/build/$color-$version.js", 'js' );
+	$deps = array( 'jquery' );
+
+	/**
+	 * Core JS File
+	 *
+	 * @todo Once 5.5 is completely removed this can be removed.
+	 */
 	if( 5.5 === $version ){
-		wp_enqueue_script( 'cagov-core-script', $core_js_file, array( 'jquery', 'cagov-core-template-script' ), CAWEB_VERSION, true );
+		$core_js_file = caweb_get_min_file( "/src/version-$version/cagov.core.js", 'js' );
+		wp_register_script( 'cagov-core-js-script', $core_js_file, $deps, CAWEB_VERSION, true );
+
+		$deps = [ 'cagov-core-js-script' ];
+
 	}
+
+	wp_enqueue_script( 'cagov-core-script', $template_js_file, $deps, CAWEB_VERSION, true );
 
 	wp_enqueue_script( 'caweb-core-script' );
 
