@@ -20,7 +20,7 @@ $caweb_keyword      = isset( $_GET['q'] ) ? sanitize_text_field( wp_unslash( $_G
 <div class="container py-3">
 	<form id="Search" class="pos-rel" action="<?php print esc_url( site_url( 'serp' ) ); ?>">
 		<span class="sr-only" id="SearchInput">Custom Google Search</span>
-		<input type="text" id="q" name="q" value="<?php print esc_attr( $caweb_keyword ); ?>" aria-labelledby="SearchInput" placeholder="Search" class="search-textfield" />
+		<input type="search" id="q" name="q" value="<?php print esc_attr( $caweb_keyword ); ?>" aria-labelledby="SearchInput" placeholder="Search" class="search-textfield" />
 		<button type="submit" class="gsc-search-button ms-0 w-auto">
 			<span class="ca-gov-icon-search" aria-hidden="true" ></span>
 			<span class="sr-only">Submit</span>
