@@ -5,6 +5,7 @@ CAWeb 1.12.0
 - Corrected issue cagov core script loading on backend when creating widgets
 - Added pagination to Github Module
 - Footer Social Share ul element no longer renders if empty
+- Changed Search input type from text to search 
 
 CAWeb 1.11.3a
 - Increased admin_bar_menu priority due to 6.6.1 increase
